--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full">
 <head>
   <meta charset="UTF-8" />
-  <title>Emerald Depth – Employee Tracker</title>
+  <title>Eman Bakery – Employee Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Tailwind via CDN -->
@@ -35,7 +35,7 @@
         class="bg-gradient-to-b from-emeraldDark to-emeraldGreen rounded-3xl shadow-2xl border border-white/10 px-6 py-8 space-y-6">
         <div class="text-center space-y-1">
           <p class="text-xs uppercase tracking-[0.25em] text-slate-300">gradient 06</p>
-          <h1 class="text-2xl font-semibold tracking-wide">Emerald Depth</h1>
+          <h1 class="text-2xl font-semibold tracking-wide">Eman Bakery</h1>
           <p class="text-xs text-slate-300 mt-1">Bank account onboarding status</p>
         </div>
 
@@ -59,8 +59,8 @@
           </button>
 
           <p class="text-[11px] text-slate-300 text-center leading-snug mt-1">
-            Use the email and password of the Supabase Auth users you created.<br />
-            Roles are controlled by the <span class="font-medium">user_roles</span> table.
+            Login With Your User Name and Password.<br />
+            www.emanbakeries.com <span class="font-medium"></span> .
           </p>
         </div>
       </div>
@@ -71,7 +71,7 @@
       <!-- Top bar -->
       <div class="flex items-center justify-between mb-5">
         <div>
-          <h2 class="text-xl font-semibold tracking-wide">Emerald Depth</h2>
+          <h2 class="text-xl font-semibold tracking-wide">Eman Bakery</h2>
           <p id="currentUserRole" class="text-xs text-slate-300 mt-0.5"></p>
         </div>
         <button id="logoutBtn"
