--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div
         class="bg-gradient-to-b from-emeraldDark to-emeraldGreen rounded-3xl shadow-2xl border border-white/10 px-6 py-8 space-y-6">
         <div class="text-center space-y-1">
-          <p class="text-xs uppercase tracking-[0.25em] text-slate-300">gradient 06</p>
+          <p class="text-xs uppercase tracking-[0.25em] text-slate-300">eman</p>
           <h1 class="text-2xl font-semibold tracking-wide">Eman Bakery</h1>
           <p class="text-xs text-slate-300 mt-1">Bank account onboarding status</p>
         </div>
